test/tests/errors/error-class-const-out-of-scope.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        public const x: int = 1;
    }

    output x;
}